--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+##Spring Datasource
+spring.datasource.url= @jdbc@
+spring.datasource.username= @dbUserName@
+spring.datasource.password= @dbPassword@
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
 
+
+##Hibernate Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Hibernate ddl auto(create, create-drop, validate, update )
+spring.jpa.hibernate.ddl-auto= update
+
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type = TRACE
+
+#path of the Error Controller
+server.error.path=/error
+
+#mail server
+spring.mail.host= smtp.gmail.com
+spring.mail.username= damianos.pappas@googlemail.com
+spring.mail.password= Damianos123456
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth= true
+spring.mail.properties.mail.smtp.starttls.enable= true
