28 - Deploy project as app service on Azure(http://certified-webapp.azurewebsites.net/)

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <!--        <dbUserName>root</dbUserName>-->
     <!--        <dbPassword>root</dbPassword>-->
     <!--    </properties>-->
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <profiles>
         <profile>
             <id>Local</id>
